tests/errors/codec_duplicate_field_name.dang
# Two fields cannot encode to the same JSON object key.

type DuplicateNames {
  firstName: String! @JSON.field(name: "name")
  displayName: String! @JSON.field(name: "name")
}

print("Should not reach here!")
